JACK Audio Connection Kit - Qt GUI Interface
--------------------------------------------

ChangeLog

0.0.4   2003-08-27  Minor changes and bugfixes.

- The patchbay port lists are now sorted in a more numerical friendly manner
  (as been suggested by Steve Harris); the sort code has been "borrowed" from
  qjackconnect, yet again.

- Patchbay port connection lines are now shown always visible, even if their
  respective connected port items aren't.

0.0.3   2003-08-07  Integrated visual patchbay.

- A patchbay for jack port connections is now integrated, much like the
  greatest Mathias Nagorni's qjackconnect (http://www.suse.de/~mana/jack.html).

0.0.2   2003-08-02  Client code features introduced.

- JACK library and header files are checked on configure.
- Server CPU load, sample rate and time elapsed since last XRUN
  detected, are now displayed on statistics.
  
0.0.1   2003-07-26  Initial release.
